--- a/content/post/2021-09-15-course-plan/index.en.Rmd
+++ b/content/post/2021-09-15-course-plan/index.en.Rmd
@@ -39,3 +39,5 @@ If time allows, I would like to summarize the global and national trends in food
 In the summer semester 2022, I would like to apply for an internship, but I have not decided yet. At the same time, I also prepare and mainly collect a possible data for my thesis.
 
 And my final year of the program would be writing my master's thesis to defend.
+
+So I will mainly post a summary of the content each course this semester.
