--- a/content/post/2022-05-18-normal-linear-model/index.Rmd
+++ b/content/post/2022-05-18-normal-linear-model/index.Rmd
@@ -34,9 +34,9 @@ options(mc.cores=parallel::detectCores())
 ## Model
 | Model | Model Equation |
 |-------|----------------------------------|
-| Normal Linear Model | $\mu_n=\beta_0+\beta_1x_{n1}+\cdots +\beta_{M}x_{nM}$ <br />$p(y_n | \mu_n,\sigma) \sim Normal(y_n|\mu_n,\sigma^2)$<br /> |
-| This Model          | $\mu_n=beta_0+\beta_1Age_n+\beta_2Qual_n$ <br />$p(Income_n | \mu,\sigma) \sim Normal(Income_n | \mu_n,\sigma^2)$<br />   |
-| Simulation          |$\mu_n=300+10Age_n+200Qual_n$ <br />$p(Income_n|\mu,\sigma) \sim Normal(Income_n | \mu_n,100^2)$<br /> |
+| Normal Linear Model | $\mu_n=\beta_0+\beta_1x_{n1}+\cdots +\beta_{M}x_{nM}$ <br />$p(y_n | \beta,\sigma) \sim Normal(y_n|\mu_n,\sigma^2)$<br /> |
+| This Model          | $\mu_n=\beta_0+\beta_1Age_n+\beta_2Qual_n$ <br />$p(Income_n | \beta,\sigma) \sim Normal(Income_n | \mu_n,\sigma^2)$<br />   |
+| Simulation          |$\mu_n=300+10Age_n+200Qual_n$ <br />$Income_n \sim Normal(Income_n | \mu_n,100^2)$<br /> |
 
 ## Data Generation
 ```{r}
