Normal linear model with BRMS added

--- a/content/post/2022-05-18-normal-linear-model/index.Rmd
+++ b/content/post/2022-05-18-normal-linear-model/index.Rmd
@@ -50,7 +50,7 @@ plot <- ggplot() +
   geom_point(aes(x=data$age, y=data$income, color=factor(data$qual))) + 
   theme_classic(base_family = "") +
   theme(text=element_text(size=20))+
-  labs(x="Age", y="Icome", title="Model") +
+  labs(x="Age", y="Icome", title="Scatter plot") +
   scale_color_manual("Qualification",values=c("red","blue"))+
   ggeasy::easy_center_title()
 plot
