--- a/content/post/2022-05-29-poisson-linear-model-with-brms/index.Rmd
+++ b/content/post/2022-05-29-poisson-linear-model-with-brms/index.Rmd
@@ -35,9 +35,9 @@ options(mc.cores=parallel::detectCores())
 ## Model
 | Model | Model Equation |
 |-------|----------------------------------|
-| Normal Linear Model | $\mu_n=\beta_0+\beta_1x_{n1}+\cdots +\beta_{M}x_{nM}$ <br />$p(y_n | \beta,\sigma) \sim Normal(y_n|\mu_n,\sigma^2)$<br /> |
-| This Model          | $\mu_n=\beta_0+\beta_1Age_n+\beta_2Qual_n$ <br />$p(Income_n | \beta,\sigma) \sim Normal(Income_n | \mu_n,\sigma^2)$<br />   |
-| Simulation          |$\mu_n=300+10Age_n+200Qual_n$ <br />$Income_n \sim Normal(Income_n | \mu_n,100^2)$<br /> |
+| Poisson Linear Model | $\lambda_n=exp(\beta_0+\beta_1x_{n1}+\cdots +\beta_{M}x_{nM})$ <br />$p(y_n | \beta,\sigma) \sim Poiss(y_n|\lambda_n)$<br /> |
+| This Model          | $\lambda_n=\beta_0+\beta_1Temp_n+\beta_2Holiday_n$ <br />$p(Sales_n | \beta) \sim Poiss(Sales_n | \lambda_n)$<br />   |
+| Simulation          |$\lambda_n=-2+0.2Temp_n+0.5Holiday_n$ <br />$Sales_n \sim Poiss(Sales_n | \lambda_n)$<br /> |
 
 ## Data Generation
 ```{r}
